[gd_scene load_steps=14 format=2]

[ext_resource path="res://dataFile/emojis/static.png" type="Texture" id=1]
[ext_resource path="res://dataCode/Zul.gd" type="Script" id=2]
[ext_resource path="res://Common/Wraparound.tscn" type="PackedScene" id=3]
[ext_resource path="res://Objects/LaserWeapon.tscn" type="PackedScene" id=4]
[ext_resource path="res://dataFile/musics/boss song.ogg" type="AudioStream" id=5]
[ext_resource path="res://dataCode/xfxZul.gd" type="Script" id=6]
[ext_resource path="res://dataFile/xfx/losee.wav" type="AudioStream" id=7]
[ext_resource path="res://dataFile/emojis/sick.png" type="Texture" id=8]
[ext_resource path="res://dataFile/emojis/angry.png" type="Texture" id=9]
[ext_resource path="res://dataFile/emojis/devil.png" type="Texture" id=10]
[ext_resource path="res://dataFile/emojis/mouthOpen.png" type="Texture" id=11]

[sub_resource type="CircleShape2D" id=1]
radius = 68.0275

[sub_resource type="Animation" id=2]
resource_name = "Damaged"
length = 1.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ false, true, false, true, false, true, false, true ]
}

[node name="Zul" type="KinematicBody2D"]
position = Vector2( -0.00859308, 0.0040009 )
rotation = 4.71238
scale = Vector2( 0.7, 0.7 )
collision_layer = 3
collision_mask = 2147483648
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}
static_zul = ExtResource( 1 )
sick_zul = ExtResource( 8 )
mouthOpen_zul = ExtResource( 11 )
devil_zul = ExtResource( 10 )
angry_zul = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 8, 0 )
rotation = 1.5708
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
scale = Vector2( 0.45, 0.45 )
shape = SubResource( 1 )

[node name="Wraparound" parent="." instance=ExtResource( 3 )]

[node name="LaserWeapon" parent="." instance=ExtResource( 4 )]
rotation = 1.5708
scale = Vector2( 0.7, 0.7 )

[node name="Hitbox" type="Area2D" parent="."]
rotation = 1.5708
scale = Vector2( 0.7, 0.7 )
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -2.38419e-07, 7.15256e-07 )
rotation = 1.5708
scale = Vector2( 0.75, 0.75 )
shape = SubResource( 1 )

[node name="SlowMotionTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="damagedTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="UpgradeLaserTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -40.0
autoplay = true

[node name="xfxZul" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -20.0
script = ExtResource( 6 )

[node name="ZulAnim" type="AnimationPlayer" parent="."]
anims/Damaged = SubResource( 2 )
[connection signal="body_shape_entered" from="Hitbox" to="." method="_on_Hitbox_body_shape_entered"]
[connection signal="timeout" from="SlowMotionTimer" to="." method="_on_SlowMotionTimer_timeout"]
[connection signal="timeout" from="damagedTimer" to="." method="_on_damagedTimer_timeout"]
[connection signal="timeout" from="UpgradeLaserTimer" to="." method="_on_UpgradeLaserTimer_timeout"]
